--- a/samaaja/www/leaderboard/index.html
+++ b/samaaja/www/leaderboard/index.html
@@ -1,6 +1,6 @@
 {% extends "templates/web.html" %}
 
-{% block title %}{{ _('Solve Ninja - Leaderboard') }}{% endblock %}
+{% block title %}{{ _('Samaaja - Leaderboard') }}{% endblock %}
 {% block script %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>{% include "www/leaderboard/index.js" %}</script>
