--- a/samaaja/www/leaderboard/index.html
+++ b/samaaja/www/leaderboard/index.html
@@ -11,6 +11,6 @@
 {% include 'www/leaderboard/templates/leaderboard_section.html' %}
 {% include 'www/leaderboard/templates/active_cities.html' %}
 {% include 'www/leaderboard/templates/campaign_section.html' %}
-
+{% include 'www/leaderboard/templates/opportunity_section.html' %}
 
 {% endblock %}
